--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
+  datasource:
+    url: jdbc:h2:mem:testdb
+    username: user
+    password: 1q1q1q
+    driver-class-name: org.h2.Driver
   jpa:
     hibernate:
       ddl-auto: create
@@ -8,6 +13,11 @@ spring:
         show_sql: true
         format_sql: true
         use_sql_comments: true
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
 
 logging:
   level:
